fixed dash on firefox

--- a/web2py/applications/BootUp/static/css/bootUpCSS.css
+++ b/web2py/applications/BootUp/static/css/bootUpCSS.css
@@ -90,3 +90,7 @@
     text-justify: inter-word;
 }
 
+.bootable .rewards {
+    clear: both;
+}
+
